# DecayEngine

./: CMakeLists.txt  fs.cfg  main.cpp  test.cfg
3rd/: make-deps.ps1  make-deps.sh
gamedata/shaders/ds/: fs_test.glsl
gamedata/textures/: dummy.tga
src/: CMakeLists.txt
src/base/: CMakeLists.txt  assert.hpp  aton.hpp  baseTypes.hpp  concepts.hpp  configs.cpp  configs.hpp  cpu_extension_checker.hpp  defines.hpp  files.cpp  files.hpp  filesystem.cpp  filesystem.hpp  flags.hpp  fpsCounter.hpp  lang_defines.hpp  logs.cpp  logs.hpp  math.hpp  serialization.hpp  time.cpp  time.hpp  traits.hpp  vector2.hpp
src/base/allocators/: AlignedAllocator.hpp  ObjectPool.hpp
src/base/ftl/: array.hpp  containers_base.hpp  cp_string.hpp  function_traits.hpp  ring.hpp  string.cpp  string.hpp  vector.hpp  vector2.hpp  vector3.hpp
src/benchmarks/: CMakeLists.txt  benchmarks.cpp
src/graphics/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraManipulator.hpp  GBuffer.cpp  GBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  LightManager.cpp  LightManager.hpp  Mesh.cpp  Mesh.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp
src/graphics/algorithms/: FrustumCulling.cpp  FrustumCulling.hpp  frustum_culling_asm.hpp
src/graphics/algorithms/asm/: x86_64sv_avx_frustum_culling.asm  x86_64sv_sse_frustum_culling.asm
src/graphics/gui/: UiBuilder.cpp  UiBuilder.hpp
src/input/: CMakeLists.txt  InputContext.hpp
src/luabind/: CMakeLists.txt  Function.hpp  LuaContext.cpp  LuaContext.hpp
src/tests/: CMakeLists.txt  ConfigTests.cpp  FileTests.cpp  RingTests.cpp  VectorTests.cpp  allocatorTests.cpp  arrayTests.cpp  formatTest.cpp  mathVectorTests.cpp  serializeTests.cpp  stringTests.cpp  tests.cpp
testGamedata/scripts/: main.lua
testGamedata/ui/: gui.xml
